# pbl-app-2025

./: .gitignore  AGENT.md  CLAUDE.md  GEMINI.md  NEW_TEAM_SETUP.md  README.md  main.py  manage.py  pyproject.toml  routers.py  teachers_paper.sql  test.txt
.github/: copilot-instructions.md
Catan/: apps.py  urls.py  views.py
agileca/: apps.py  models.py  urls.py  views.py
authz/: apps.py
docs/: HOW_TO_DATA_INSERT_BY_MIGRATION.md  HOW_TO_DEPLOY.md  HOW_TO_RESOLVE_CONFLICTS.md  NEW_TEAM_SETUP.md  SET_UP_CI.md  SQLITE3_INSTALLATION.md  UV_INSTALLATION.md
graphic/: urls.py  views.py
graphics/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
h34vvy_u53rzz/: apps.py  backends.py  doors.py  forms.py  labs.py  middleware.py  models.py  run.sh  tests.py  urls.py  views.py
h34vvy_u53rzzreset/: apps.py
katan/: apps.py  index.html  member.html  views.py
mori_doragon_yuhi_machi/: admin.py  apps.py  models.py  urls.py  views.py
nanakorobiyaoki/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
pbl_project/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
scripts/: check_migrations.sh  deploy.sh  remove_high_school_from_fixture.py
shiokara/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
shouronpou/: apps.py  models.py  urls.py  views.py
ssk/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
takenoko/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
teachers/: MEMO.md  admin.py  db.sqlite3.bak  db.sqlite3.org  forms.py  models.py  urls.py  (+2 more)
(+622 files in other folders)
