[project]
name = "pbl-app-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.25",
    "requests", #team_kitajaki
    "pdfminer.six", #team_kitajaki
    "pdfplumber", #team_kitajaki
    "jpholiday", #team_kitajaki
]
