[project]
name = "pbl-app-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.25",
    "requests", #team_kitajaki
    "pdfminer.six", #team_kitajaki
    "pdfplumber", #team_kitajaki
    "jpholiday", #team_kitajaki
    "pillow>=11.3.0",
    "pytz>=2025.2",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
